--- a/client/src/views/Home/ordenDogs.module.css
+++ b/client/src/views/Home/ordenDogs.module.css
@@ -7,7 +7,8 @@
 .temperamentos {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
+  margin-bottom: 0px;
+  gap: 5px;
   justify-content: center;
   align-items: center;
 }
@@ -32,5 +33,3 @@
   border-color: #007bff;
   box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
 }
-
-/* Resto de tus estilos... */
